--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 body  {
     background-image: url(lancamento.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
 }
 </style>
