--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <style>
 body  {
     background-image: url(lancamento.jpg);
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: center; 
+    background-size: 75%;
 }
 </style>
 </head>
