--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body  {
-    background-image: url(lancamento.jpg);
+    background-image: url(manutencao.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
