--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ body  {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
+    background-size: 80%;
 }
 </style>
 </head>
