--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@ body  {
 </style>
 </head>
 <body>
+    <br><br><br><br><br><br><br><br><center><h1>INAUGURAÇÃO SEXTA 26/01/18 - 18:00</H1>
 </body>
 </html>
