--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Ragnagamers</title>
 <style>
 body  {
-    background-image: url(manutencao.jpg);
+    background-image: url(manutencao0.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
